<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MaidroidReminder Free</string>

    <!-- Global -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- 
         Main Activity 

         Files:
            - /res/layout/main.xml
    -->
    <string name="add">Add</string>
    <string name="browse">Browse</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <!-- 
        Add/Edit event activity 

        Files:
            - res/layout/add.xml
            - res/layout/edit.xml
    -->
    <string name="title">Title</string>
    <string name="setDate">Set Date</string>
    <string name="setTime">Set Time</string>
    <string name="description">Description</string>

    <!-- 
        Pop-up dialog in event list activity 

        Files:
            - res/layout/event_context_dialog.xml
    -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <!--
        Browse Activity
        Files:
            - src/main/scala/activity/BrowseActivity.scala
    -->
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="repeat">Repeat</string>
    <string name="outdated">Outdated</string>
    <string name="clear">Clear</string>

    <!-- 
        Preference Activity
        Files:
            - res/xml/settings.xml
    -->
    <string name="voiceCategory">Voice Effect</string>
    <string name="notificationCategory">Notification</string>
    <string name="enableVoiceTitle">Welcome Voice</string>
    <string name="enableVoiceSummary">Enable maid voice when start this app.</string>
    <string name="enableSoundTitle">Sound</string>
    <string name="enableVibrationTitle">Vibration</string>

    <!-- 
        View Activity
        Files:
            - res/layout/view.xml
    -->
    <string name="gotIt">OK</string>
    <string name="remindLater">Remind Me Later</string>

</resources>
