<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" >

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:layout_marginTop="10sp"
                  android:layout_marginLeft="5sp"
                  android:layout_marginRight="5sp"
                  android:layout_marginBottom="5sp"
                  android:orientation="vertical">

        <EditText android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:id="@+id/edit_title"
                  android:hint="@string/title"/>
                  
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <Button android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/edit_date"
                    android:textSize="16sp"
                    android:hint="@string/setDate"/>

            <Button android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/edit_time"
                    android:textSize="16sp"
                    android:hint="@string/setTime"/>

        </LinearLayout>

        <Spinner android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:prompt="@string/repeat_prompt"
                 android:id="@+id/edit_repeat"/>

        <EditText android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:singleLine="false"
                  android:inputType="textMultiLine"
                  android:gravity="top"
                  android:id="@+id/edit_description"
                  android:hint="@string/description"/>

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.5">

        <ImageView android:id="@+id/edit_maid"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="2"/>

        <ScrollView android:id="@+id/edit_scrollView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
            <TextView android:id="@+id/edit_message"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:textSize="20sp"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/background_gray"
                  android:paddingTop="5sp"
                  android:paddingLeft="5sp"
                  android:paddingRight="5sp"
                  android:orientation="horizontal">

        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/edit_ok"
                android:text="@string/ok"/>

        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/edit_cancel"
                android:text="@string/cancel"/>
                  
    </LinearLayout>

</LinearLayout>
