<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" >
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:minHeight="50dp"
                  android:id="@+id/main_ads"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:orientation="horizontal">

        <ImageView android:id="@+id/maid"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"/>

        <LinearLayout android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:paddingBottom="20sp"
                      android:layout_gravity="bottom|center">

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">

                <Button android:text="@string/add" 
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:drawableTop="@android:drawable/ic_menu_add"
                        android:id="@+id/main_add_button"/>

                <Button android:text="@string/browse" 
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" 
                        android:drawableTop="@android:drawable/ic_menu_agenda"
                        android:id="@+id/main_browse_button"/>

            </LinearLayout>
               
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1">

                <Button android:text="@string/settings" 
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" 
                        android:drawableTop="@android:drawable/ic_menu_preferences"
                        android:id="@+id/main_setting_button"/>

                <Button android:text="@string/exit" 
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:drawableTop="@android:drawable/ic_menu_revert"
                        android:id="@+id/main_exit_button"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ScrollView android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2.5">
        <TextView android:id="@+id/message"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:textSize="20sp"/>
    </ScrollView>

</LinearLayout>
